--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
         <h1>Odin Recipes</h1>
 
         <a href="recipes/lasagna.html">Lasagna Recipe</a>
+        <a href="recipes/amish-white-bread.html">Bread Recipe</a>
+        <a href="recipes/guacamole.html">Guacamole Recipe</a>
+
     </body>
 </html>
