Turned the links to recipes into a list

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
 
-        <a href="recipes/lasagna.html">Lasagna Recipe</a>
-        <a href="recipes/amish-white-bread.html">Bread Recipe</a>
-        <a href="recipes/guacamole.html">Guacamole Recipe</a>
+        
+
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li></li><a href="recipes/amish-white-bread.html">Bread Recipe</a></li>
+        <li></li><a href="recipes/guacamole.html">Guacamole Recipe</a></li>
+
+        </ul>
 
     </body>
 </html>
