Added color and made it more pretty

--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <div id="font" class="header" ><h1>Odin Recipes</h1></div>
         <ul>
-
-        
-
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li></li><a href="recipes/amish-white-bread.html">Bread Recipe</a></li>
-        <li></li><a href="recipes/guacamole.html">Guacamole Recipe</a></li>
+        <p>
+            <button id="font" class="list lasagna">
+                <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+            </button>
+        </p>
+        <p>
+            <button id="font" class="list bread">
+                <li><a href="recipes/amish-white-bread.html">Bread Recipe</a></li>
+            </button>
+            </p>
+        <p><button id="font" class=" list guacamole"><li><a href="recipes/guacamole.html">Guacamole Recipe</a>
+        </li>
+    </button>
+</p>
 
         </ul>
 
